@@ -31,6 +31,7 @@ public class Driver {
     parser.addBooleanOption("sparse", 'S');
     parser.addStringOption("mutation-rate", 'm');
     parser.addStringOption("recombination-rate", 'r');
+    parser.addBooleanOption("no-comparators", 'C');
 
     try {
       argv = parser.parse(argv);
@@ -45,7 +46,7 @@ public class Driver {
       System.err.println("ERROR: scientific mode requires a test file");
       System.exit(1);
     }
-    
+
     // get started
     Configuration config = ConfigLoader.load(argv[0]);
     GeneticAlgorithm genetic =
@@ -59,10 +60,11 @@ public class Driver {
     genetic.setSparse(parser.getOptionState("sparse"));
     genetic.setMutationRate(parser.getOptionInteger("mutation-rate", -1));
     genetic.setRecombinationRate(parser.getOptionDouble("recombination-rate", -1.0));
+    genetic.setEvolveComparators(!parser.getOptionState("no-comparators"));
     if (parser.getOptionState("active"))
       genetic.setActive(true);
     if (parser.getOptionValue("linkfile") != null)
-      genetic.setLinkFile(parser.getOptionValue("linkfile"));    
+      genetic.setLinkFile(parser.getOptionValue("linkfile"));
     genetic.run();
   }
 
@@ -83,8 +85,9 @@ public class Driver {
     System.out.println("  --scientific           test active learning");
     System.out.println("  --mutation-rate=n      mutation rate (default: self-evolving)");
     System.out.println("  --recombination-rate=n recombination rate (default: self-evolving)");
+    System.out.println("  --no-comparators       don't evolve comparators");
     System.out.println("");
     System.out.println("Duke version " + Duke.getVersionString());
   }
-  
+
 }
